Changes in vesion 2.2.0
+ New functions to remove duplicate edges
  - deleteDuplicateEdges
  - deleteSelfLoops
+ New node selection function
  - selectNodesConnectedBySelectedEdges
+ New visual style management functions
  - importVisualStyles
  - deleteVisualStyle
+ New edge bundling function
  - bundleEdges
+ New custom graphics options for nodes
  - setNodeCustomBarChart
  - setNodeCustomBoxChart
  - setNodeCustomHeatMapChart
  - setNodeCustomLineChart
  - setNodeCustomPieChart
  - setNodeCustomRingChart
  - setNodeCustomPosition
  - removeNodeCustomChart
+ Bug Fixes
  - selectEdgesConnectingSelectedNodes -- set default by.col = 'name'
  - setEdgeLineWidthMapping -- fixes input type
  - getGroupInfo -- works without collapsing first
  - getTableColumns -- work with List type columns
+ For Developers
  - Updated many functions to properly pass the base.url parameter to functions like getNetworkSuid. Please be aware and vigilent about this with future development.
+ Deprecated
  - Nothing
+ Defunct
  - Previously deprecated functions in v2.0 from older 1.x version of the package

Changes in version 2.0.0
+ New converter functions between Cytoscape and iGraph
  - createIgraphFromNetwork
  - createNetworkFromIgraph
+ New converter functions between Cytoscape and R data.frames
  - createNetworkFromDataFrames
+ New converter functions between Cytoscape and Bioconductor GraphNEL
  - createNetworkFromGraph
  - createGraphFromNetwork
  - addGraphToNetwork
+ Fixed visual style "Direct" functions to set persistent bypass values
  - setNodePropertyBypass
  - setEdgePropertyBypass
  - see all setNode***Bypass and setEdge***Bypass functions
+ Streamlined interfaces to CyREST and Commands API
  - cyrestGET
  - cyrestPUT
  - cyrestPOST
  - cyrestDELETE
  - cyrestAPI
  - commandsGET
  - commandsPOST
  - commandsAPI
  - commandsHelp
+ Optional network parameter supports calls to "current" or specified Cytoscape network by name or SUID