@@ -68,6 +68,7 @@ export(deleteNodeAttribute)
 export(deleteSelectedEdges)
 export(deleteSelectedNodes)
 export(deleteSelfLoops)
+export(deleteStyleMapping)
 export(deleteTableColumn)
 export(deleteVisualStyle)
 export(deleteWindow)
@@ -187,7 +188,7 @@ export(openSession)
 export(ping)
 export(pluginVersion)
 export(redraw)
-export(removeNodeCustomChart)
+export(removeNodeCustomGraphics)
 export(renameCytoscapeNetwork)
 export(renameNetwork)
 export(renameTableColumn)
@@ -261,8 +262,10 @@ export(setNodeCustomBarChart)
 export(setNodeCustomBoxChart)
 export(setNodeCustomHeatMapChart)
 export(setNodeCustomLineChart)
+export(setNodeCustomLinearGradient)
 export(setNodeCustomPieChart)
 export(setNodeCustomPosition)
+export(setNodeCustomRadialGradient)
 export(setNodeCustomRingChart)
 export(setNodeFillOpacityBypass)
 export(setNodeFontSizeBypass)
@@ -329,6 +332,7 @@ importFrom(igraph,make_graph)
 importFrom(igraph,set.edge.attribute)
 importFrom(igraph,set.vertex.attribute)
 importFrom(methods,new)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(utils,URLencode)
 importFrom(utils,browseURL)
