@@ -1,15 +1,15 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/StyleDefaults.R
-\name{removeNodeCustomChart}
-\alias{removeNodeCustomChart}
-\title{Remove Node Custom Chart}
+\name{removeNodeCustomGraphics}
+\alias{removeNodeCustomGraphics}
+\title{Remove Node Custom Graphics}
 \usage{
-removeNodeCustomChart(slot = 1, style.name = "default",
+removeNodeCustomGraphics(slot = 1, style.name = "default",
   base.url = .defaultBaseUrl)
 }
 \arguments{
 \item{slot}{(optional) Which custom graphics slot to modify. Slots 1-9 are 
-available for independent charts and images. Default is 1.}
+available for independent charts, gradients and images. Default is 1.}
 
 \item{style.name}{(optional) Name of style; default is "default" style}
 
@@ -21,10 +21,10 @@ and the latest version of the CyREST API supported by this version of RCy3.}
 None
 }
 \description{
-Remove the default custom graphics.
+Remove the default custom charts, images and gradients.
 }
 \examples{
 \donttest{
-removeNodeCustomChart()
+removeNodeCustomGraphics()
 }
 }
