@@ -40,7 +40,7 @@ is 1.}
 \item{separation}{(optional) Distance between bars. Default is 0.0.}
 
 \item{slot}{(optional) Which custom graphics slot to modify. Slots 1-9 are 
-available for independent charts and images. Default is 1.}
+available for independent charts, gradients and images. Default is 1.}
 
 \item{style.name}{(optional) Name of style; default is "default" style}
 
@@ -61,5 +61,5 @@ setNodeCustomBarChart(c("data1","data2","data3"))
 }
 }
 \seealso{
-setNodeCustomPosition
+setNodeCustomPosition, removeNodeCustomGraphics
 }
