@@ -33,7 +33,7 @@ and max from specified data columns.}
 is 1.}
 
 \item{slot}{(optional) Which custom graphics slot to modify. Slots 1-9 are 
-available for independent charts and images. Default is 1.}
+available for independent charts, gradients and images. Default is 1.}
 
 \item{style.name}{(optional) Name of style; default is "default" style}
 
@@ -54,5 +54,5 @@ setNodeCustomHeatMapChart(c("data1","data2","data3"))
 }
 }
 \seealso{
-setNodeCustomPosition
+setNodeCustomPosition, removeNodeCustomGraphics
 }
